--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
